--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
+    <div id="page">
+      <header>
+        <h1>Compras da semana</h1>
+      </header>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
