--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <header>
         <h1>Compras da semana</h1>
       </header>
+
+      <main>
+        <form>
+          <input type="text" placeholder="Adicione um novo item" required />
+          <button>Adicionar item</button>
+        </form>
+      </main>
     </div>
 
     <script src="./app.js"></script>
