feat: cria lista de items versão mobile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
           <input type="text" placeholder="Adicione um novo item" required />
           <button>Adicionar item</button>
         </form>
+
+        <ul class="list-items">
+          <li class="checked">Pão de forma <button>remover</button></li>
+          <li>Café preto <button>remover</button></li>
+          <li>Suco de laranja <button>remover</button></li>
+          <li>Bolacha <button>remover</button></li>
+        </ul>
       </main>
     </div>
 
