feat: cria toasty versão mobile

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           <li>Suco de laranja <button>remover</button></li>
           <li>Bolacha <button>remover</button></li>
         </ul>
+
+        <div class="toasty">
+          <img src="./img/alert.svg" alt="icone de alerta" /> O item foi
+          removido da lista
+          <button>Fechar</button>
+        </div>
       </main>
     </div>
 
