--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <div id="page">
       <header>
+        <img class="logo" src="./img/logo.svg" alt="Logo Quicklist" />
         <h1>Compras da semana</h1>
       </header>
 
