feat: adiciona funcionalidade para checar e remover items

--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
           <button>Adicionar item</button>
         </form>
 
-        <ul class="list-items">
-          <li class="checked">Pão de forma <button>remover</button></li>
-          <li>Café preto <button>remover</button></li>
-          <li>Suco de laranja <button>remover</button></li>
-          <li>Bolacha <button>remover</button></li>
-        </ul>
+        <ul class="list-items"></ul>
 
         <div class="toasty">
           <img src="./img/alert.svg" alt="icone de alerta" /> O item foi
